About list update.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7114 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -370,12 +370,8 @@
 			<code>COPYING</code></p>
 	</div>
 	<div class="module">
-		<h3 text-key="about.headDevelopers"></h3>
-		<ul id="about-head-developers" class="about-list" path="about/head_developers/head_developer"></ul>
-	</div>
-	<div class="module">
-		<h3 text-key="about.projectOwners"></h3>
-		<ul id="about-project-owners" class="about-list" path="about/project_owners/project_owner"></ul>
+		<h3 text-key="about.maintainers"></h3>
+		<ul id="about-maintainers" class="about-list" path="about/maintainers/maintainer"></ul>
 	</div>
 	<div class="module">
 		<h3 text-key="about.developers"></h3>
