preferences: added option to delete OAuth token/secret
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7133 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -252,12 +252,16 @@
 	</div>
 </div>
 <!-- StoredPrefs -->
-<div class="module" x-on="main">
+<div class="module button-module" x-on="main">
 	<h3 id="pref-stored-title" x-text="foxtrick.prefs.captionCleanupBranch"></h3>
 	<table>
 		<tr>
 			<td><label id="pref-stored-restore-label" x-text="foxtrick.prefs.labelCleanupBranch"></label></td>
 			<td><button id="pref-stored-restore" x-text="button.restoreDefault"></button></td>
+		</tr>
+		<tr>
+			<td><label id="pref-delete-token-label" x-text="foxtrick.prefs.labelDeleteToken"></label></td>
+			<td><button id="pref-delete-token" x-text="button.deleteToken"></button></td>
 		</tr>
 		<tr>
 			<td><label id="pref-stored-disable-label" x-text="foxtrick.prefs.labelDisableAll"></label></td>
