preferences: select teamid for deleting oauth token
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7139 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -257,14 +257,17 @@
 	<table>
 		<tr>
 			<td><label id="pref-stored-restore-label" x-text="foxtrick.prefs.labelCleanupBranch"></label></td>
+			<td></td>
 			<td><button id="pref-stored-restore" x-text="button.restoreDefault"></button></td>
 		</tr>
 		<tr>
 			<td><label id="pref-delete-token-label" x-text="foxtrick.prefs.labelDeleteToken"></label></td>
+			<td><select id="select-delete-token-teamids"></select></td>
 			<td><button id="pref-delete-token" x-text="button.deleteToken"></button></td>
 		</tr>
 		<tr>
 			<td><label id="pref-stored-disable-label" x-text="foxtrick.prefs.labelDisableAll"></label></td>
+			<td></td>
 			<td><button id="pref-stored-disable" x-text="button.disableAll"></button></td>
 		</tr>
 	</table>
