--- a/content/preferences.html
+++ b/content/preferences.html
@@ -25,6 +25,7 @@
 	<script type="application/x-javascript" src="./util/inject.js"></script>
 	<script type="application/x-javascript" src="./util/layout.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
+	<script type="application/x-javascript" src="./util/log.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/module.js"></script>
