--- a/content/background.html
+++ b/content/background.html
@@ -16,6 +16,7 @@
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/api.js"></script>
+	<script type="application/x-javascript" src="./util/array.js"></script>
 	<script type="application/x-javascript" src="./util/copy-button.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
